--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+
     <link rel="stylesheet" href="./css/styles.css">
 
 
@@ -22,24 +24,25 @@
 
     <!-- Menu-->
     <header class="page-header">
-        <nav>
-
-            <a href="./index.html" class="logo link"><span class="blue-logo">Web</span>Studio</a>
-
-            <ul class="site-nav list">
-                <li><a href="./index.html" class="link current">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="#" class="link">Контакты</a></li>
+        <div class="container flex">
+            <nav class="nav-flex">
+                <a href="./index.html" class="logo link"><span class="blue-logo">Web</span>Studio</a>
+                <ul class="site-nav list">
+                    <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="#" class="link">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="auth-nav list">
+                <li class="iteam"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="iteam"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
 
-        <ul class="auth-nav list">
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
 
     </header>
 
+    <!-- Main -->
     <main>
         <!-- Hero -->
         <section class="hero">
@@ -50,78 +53,85 @@
 
         <!-- Advantages -->
         <section class="section advantages">
-            <h2 class="section-title">Преймущества</h2>
-            <ul class="list">
-                <li>
-                    <h3 class="title">Внимание к деталям</h3>
-                    <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li>
-                    <h3 class="title">Пунктуальность</h3>
-                    <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li>
-                    <h3 class="title">Планирование</h3>
-                    <p class="section-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li>
-                    <h3 class="title">Современные технологии</h3>
-                    <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-
-            </ul>
-
+            <div class="container">
+                <h2 class="section-title">Преймущества</h2>
+                <ul class="list advantages flex">
+                    <li class="flex-element">
+                        <h3 class="title">Внимание к деталям</h3>
+                        <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                    <li class="flex-element">
+                        <h3 class="title">Пунктуальность</h3>
+                        <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </li>
+                    <li class="flex-element">
+                        <h3 class="title">Планирование</h3>
+                        <p class="section-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
+                    <li class="flex-element">
+                        <h3 class="title">Современные технологии</h3>
+                        <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <!-- What are we doing -->
-        <section class="section">
-            <h2 class="section-title">Чем мы занимаемся</h2>
-            <ul class="list">
-                <li><img src="./img/box1.jpg" alt="Алгоритм" width="350"></li>
-                <li><img src="./img/box2.jpg" alt="Софт для телефонов" width="350"></li>
-                <li><img src="./img/box3.jpg" alt="Планшеты" width="350"></li>
-            </ul>
-
+        <section class="section doing">
+            <div class="container">
+                <h2 class="section-title">Чем мы занимаемся</h2>
+                <ul class="list">
+                    <li class="item"><img src="./img/box2.jpg" alt="Софт для телефонов" width="370"></li>
+                    <li class="item"><img src="./img/box3.jpg" alt="Планшеты" width="370"></li>
+                    <li class="item"><img src="./img/box1.jpg" alt="Алгоритм" width="370"></li>
+                </ul>
+            </div>
         </section>
 
         <!--Team-->
         <section class="section team">
-            <h2 class="section-title">Наша команда</h2>
-            <ul class="list">
-                <li>
-                    <img src="./img/img.jpg" alt="Игорь Демьяненко" width="250">
-                    <h3 class="name-text">Игорь Демьяненко</h3>
-                    <p class="section-text">Product Designer</p>
-                </li>
-                <li>
-                    <img src="./img/img(1).jpg" alt="Ольга Репина" width="250">
-                    <h3 class="name-text">Ольга Репина</h3>
-                    <p class="section-text">Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./img/img(2).jpg" alt="Николай Тарасов" width="250">
-                    <h3 class="name-text">Николай Тарасов</h3>
-                    <p class="section-text">Marketing</p>
-                </li>
-                <li>
-                    <img src="./img/img(3).jpg" alt="Михаил Ермаков" width="250">
-                    <h3 class="name-text">Михаил Ермаков</h3>
-                    <p class="section-text">UI Designer</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="section-title">Наша команда</h2>
+                <ul class="list">
+                    <li>
+                        <img src="./img/img.jpg" alt="Игорь Демьяненко" width="250">
+                        <h3 class="name-text">Игорь Демьяненко</h3>
+                        <p class="section-text">Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="./img/img(1).jpg" alt="Ольга Репина" width="250">
+                        <h3 class="name-text">Ольга Репина</h3>
+                        <p class="section-text">Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img src="./img/img(2).jpg" alt="Николай Тарасов" width="250">
+                        <h3 class="name-text">Николай Тарасов</h3>
+                        <p class="section-text">Marketing</p>
+                    </li>
+                    <li>
+                        <img src="./img/img(3).jpg" alt="Михаил Ермаков" width="250">
+                        <h3 class="name-text">Михаил Ермаков</h3>
+                        <p class="section-text">UI Designer</p>
+                    </li>
+                </ul>
+
+            </div>
         </section>
     </main>
 
     <!-- Footer-->
     <footer class="footer">
-        <a href="./index.html" class="logo link"><span class="blue-logo">Web</span>Studio</a>
-        <address>
+        <div class="container">
+            <a href="./index.html" class="logo link"><span class="blue-logo">Web</span>Studio</a>
+            <address>
             <ul class="footer list">
                 <li><a href="https://goo.gl/maps/hwr6JyE6x6DrGfeN8" class="link link-address">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
         </address>
+
+        </div>
     </footer>
 
 </html>
