--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
 
     <link rel="stylesheet" href="./css/styles.css">
 
@@ -19,120 +20,127 @@
 <body>
     <!-- Menu-->
     <header class="page-header">
-        <nav>
-
-            <a href="./index.html" class="logo link"><span class="blue-logo">Web</span>Studio</a>
-
-            <ul class="site-nav list">
-                <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-                <li><a href="#" class="link">Контакты</a></li>
+        <div class="container flex">
+            <nav class="nav-flex">
+                <a href="./index.html" class="logo link"><span class="blue-logo">Web</span>Studio</a>
+                <ul class="site-nav list">
+                    <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                    <li class="item"><a href="#" class="link">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="auth-nav list">
+                <li class="iteam"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="iteam"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
 
-        <ul class="auth-nav list">
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
 
     </header>
 
+    <!-- Main -->
     <main>
         <section class="portfolio">
-            <h1 class="title">Потртфолио</h1>
-            <ul class="list">
-                <li><button type="button" class="button current secondary">Все</button></li>
-                <li><button type="button" class="button secondary">Веь-сайт</button></li>
-                <li><button type="button" class="button secondary">Приложения</button></li>
-                <li><button type="button" class="button secondary">Дизайн</button></li>
-                <li><button type="button" class="button secondary">Маркетинг</button></li>
-            </ul>
-            <ul class="list">
-                <li>
-                    <a href="" class="link">
-                        <img src="./img/portfolio/img-p.jpg" alt="Технокряк">
-                        <h2 class="title">Технокряк</h2>
-                        <p class="section-text">Веб-сайт</p>
-                    </a>
+            <div class="container">
+                <h1 class="title">Потртфолио</h1>
+                <ul class="list flex">
+                    <li><button type="button" class="button current secondary">Все</button></li>
+                    <li><button type="button" class="button secondary">Веь-сайт</button></li>
+                    <li><button type="button" class="button secondary">Приложения</button></li>
+                    <li><button type="button" class="button secondary">Дизайн</button></li>
+                    <li><button type="button" class="button secondary">Маркетинг</button></li>
+                </ul>
+                <ul class="list flex">
+                    <li class="iteam">
+                        <a href="" class="link">
+                            <img src="./img/portfolio/img-p.jpg" alt="Технокряк">
+                            <h2 class="title">Технокряк</h2>
+                            <p class="section-text">Веб-сайт</p>
+                        </a>
 
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="./img/portfolio/img-p1.jpg" alt="Постер New Orlean vs Golden Star">
-                        <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                        <p class="section-text">Дизайн</p>
-                    </a>
+                    </li>
+                    <li class="iteam">
+                        <a href="" class="link">
+                            <img src="./img/portfolio/img-p1.jpg" alt="Постер New Orlean vs Golden Star">
+                            <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                            <p class="section-text">Дизайн</p>
+                        </a>
 
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="./img/portfolio/img-p2.jpg" alt="Ресторан Seafood">
-                        <h2 class="title">Ресторан Seafood</h2>
-                        <p class="section-text">Приложение</p>
-                    </a>
+                    </li>
+                    <li class="iteam">
+                        <a href="" class="link">
+                            <img src="./img/portfolio/img-p2.jpg" alt="Ресторан Seafood">
+                            <h2 class="title">Ресторан Seafood</h2>
+                            <p class="section-text">Приложение</p>
+                        </a>
 
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="./img/portfolio/img-p3.jpg" alt="Проект Prime">
-                        <h2 class="title">Проект Prime</h2>
-                        <p class="section-text">Маркетинг</p>
-                    </a>
-                </li>
+                    </li>
+                    <li class="iteam">
+                        <a href="" class="link">
+                            <img src="./img/portfolio/img-p3.jpg" alt="Проект Prime">
+                            <h2 class="title">Проект Prime</h2>
+                            <p class="section-text">Маркетинг</p>
+                        </a>
+                    </li>
 
 
-                <li>
-                    <a href="" class="link">
-                        <img src="./img/portfolio/img-p4.jpg" alt="Inspiration has no Borders">
-                        <h2 class="title">Inspiration has no Borders</h2>
-                        <p class="section-text">Веб-сайт</p>
-                    </a>
+                    <li class="iteam">
+                        <a href="" class="link">
+                            <img src="./img/portfolio/img-p4.jpg" alt="Inspiration has no Borders">
+                            <h2 class="title">Inspiration has no Borders</h2>
+                            <p class="section-text">Веб-сайт</p>
+                        </a>
 
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="./img/portfolio/img-p5.jpg" alt="Проект Boxes">
-                        <h2 class="title">Проект Boxes</h2>
-                        <p class="section-text">Приложение</p>
-                    </a>
+                    </li>
+                    <li class="iteam">
+                        <a href="" class="link">
+                            <img src="./img/portfolio/img-p5.jpg" alt="Проект Boxes">
+                            <h2 class="title">Проект Boxes</h2>
+                            <p class="section-text">Приложение</p>
+                        </a>
 
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="./img/portfolio/img-p6.jpg" alt="Издание Limited Edition">
-                        <h2 class="title">Издание Limited Edition</h2>
-                        <p class="section-text">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="./img/portfolio/img-p7.jpg" alt="Проект LAB">
-                        <h2 class="title">Проект LAB</h2>
-                        <p class="section-text">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                        <img src="./img/portfolio/img-p8.jpg" alt="Growing Business">
-                        <h2 class="title">Growing Business</h2>
-                        <p class="section-text">Приложение</p>
+                    </li>
+                    <li class="iteam">
+                        <a href="" class="link">
+                            <img src="./img/portfolio/img-p6.jpg" alt="Издание Limited Edition">
+                            <h2 class="title">Издание Limited Edition</h2>
+                            <p class="section-text">Дизайн</p>
+                        </a>
+                    </li>
+                    <li class="iteam">
+                        <a href="" class="link">
+                            <img src="./img/portfolio/img-p7.jpg" alt="Проект LAB">
+                            <h2 class="title">Проект LAB</h2>
+                            <p class="section-text">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li class="iteam">
+                        <a href="" class="link">
+                            <img src="./img/portfolio/img-p8.jpg" alt="Growing Business">
+                            <h2 class="title">Growing Business</h2>
+                            <p class="section-text">Приложение</p>
 
-                    </a>
-                </li>
-            </ul>
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
         </section>
     </main>
 
     <!-- Footer-->
     <footer class="footer">
-        <a href="./index.html" class="logo link"><span class="blue-logo">Web</span>Studio</a>
-        <address>
+        <div class="container">
+            <a href="./index.html" class="logo link"><span class="blue-logo">Web</span>Studio</a>
+            <address>
             <ul class="footer list">
                 <li><a href="https://goo.gl/maps/hwr6JyE6x6DrGfeN8" class="link link-address">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
         </address>
+
+        </div>
     </footer>
 
 </body>
