--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <div class="container flex">
             <nav class="nav-flex">
                 <a href="./index.html" class="logo link"><span class="blue-logo">Web</span>Studio</a>
-                <ul class="site-nav list">
+                <ul class="site-nav ">
                     <li class="item"><a href="./index.html" class="link current">Студия</a></li>
                     <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
                     <li class="item"><a href="#" class="link">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="auth-nav list">
+            <ul class="auth-nav ">
                 <li class="iteam"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
                 <li class="iteam"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
@@ -46,31 +46,33 @@
     <main>
         <!-- Hero -->
         <section class="hero">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="button primary">Заказать услугу</button>
+            <div class="container">
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                <button type="button" class="button primary">Заказать услугу</button>
+            </div>
         </section>
 
 
         <!-- Advantages -->
-        <section class="section advantages">
+        <section class="section">
             <div class="container">
                 <h2 class="section-title">Преймущества</h2>
-                <ul class="list advantages flex">
-                    <li class="flex-element">
-                        <h3 class="title">Внимание к деталям</h3>
-                        <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <ul class=" advantages">
+                    <li class="advantages-item">
+                        <h3 class="advantages-title">Внимание к деталям</h3>
+                        <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="flex-element">
-                        <h3 class="title">Пунктуальность</h3>
-                        <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <li class="advantages-item">
+                        <h3 class="advantages-title">Пунктуальность</h3>
+                        <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li class="flex-element">
-                        <h3 class="title">Планирование</h3>
-                        <p class="section-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <li class="advantages-item">
+                        <h3 class="advantages-title">Планирование</h3>
+                        <p class="advantages-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="flex-element">
-                        <h3 class="title">Современные технологии</h3>
-                        <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <li class="advantages-item">
+                        <h3 class="advantages-title">Современные технологии</h3>
+                        <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
             </div>
@@ -80,10 +82,10 @@
         <section class="section doing">
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
-                <ul class="list">
-                    <li class="item"><img src="./img/box2.jpg" alt="Софт для телефонов" width="370"></li>
-                    <li class="item"><img src="./img/box3.jpg" alt="Планшеты" width="370"></li>
-                    <li class="item"><img src="./img/box1.jpg" alt="Алгоритм" width="370"></li>
+                <ul class="doing">
+                    <li class="doing-item"><img src="./img/box2.jpg" alt="Софт для телефонов" width="370"></li>
+                    <li class="doing-item"><img src="./img/box3.jpg" alt="Планшеты" width="370"></li>
+                    <li class="doing-item"><img src="./img/box1.jpg" alt="Алгоритм" width="370"></li>
                 </ul>
             </div>
         </section>
@@ -92,26 +94,34 @@
         <section class="section team">
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
-                <ul class="list">
-                    <li>
-                        <img src="./img/img.jpg" alt="Игорь Демьяненко" width="250">
-                        <h3 class="name-text">Игорь Демьяненко</h3>
-                        <p class="section-text">Product Designer</p>
+                <ul class="team">
+                    <li class="team-item">
+                        <img src="./img/img.jpg" alt="Игорь Демьяненко" width="270">
+                        <div class="team-desc">
+                            <h3 class="team-title">Игорь Демьяненко</h3>
+                            <p class="team-text">Product Designer</p>
+                        </div>
                     </li>
-                    <li>
-                        <img src="./img/img(1).jpg" alt="Ольга Репина" width="250">
-                        <h3 class="name-text">Ольга Репина</h3>
-                        <p class="section-text">Frontend Developer</p>
+                    <li class="team-item">
+                        <img src="./img/img(1).jpg" alt="Ольга Репина" width="270">
+                        <div class="team-desc">
+                            <h3 class="team-title">Ольга Репина</h3>
+                            <p class="team-text">Frontend Developer</p>
+                        </div>
                     </li>
-                    <li>
-                        <img src="./img/img(2).jpg" alt="Николай Тарасов" width="250">
-                        <h3 class="name-text">Николай Тарасов</h3>
-                        <p class="section-text">Marketing</p>
+                    <li class="team-item">
+                        <img src="./img/img(2).jpg" alt="Николай Тарасов" width="270">
+                        <div class="team-desc">
+                            <h3 class="team-title">Николай Тарасов</h3>
+                            <p class="team-text">Marketing</p>
+                        </div>
                     </li>
-                    <li>
-                        <img src="./img/img(3).jpg" alt="Михаил Ермаков" width="250">
-                        <h3 class="name-text">Михаил Ермаков</h3>
-                        <p class="section-text">UI Designer</p>
+                    <li class="team-item">
+                        <img src="./img/img(3).jpg" alt="Михаил Ермаков" width="270">
+                        <div class="team-desc">
+                            <h3 class="team-title">Михаил Ермаков</h3>
+                            <p class="team-text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
 
@@ -123,13 +133,13 @@
     <footer class="footer">
         <div class="container">
             <a href="./index.html" class="logo link"><span class="blue-logo">Web</span>Studio</a>
-            <address>
-            <ul class="footer list">
-                <li><a href="https://goo.gl/maps/hwr6JyE6x6DrGfeN8" class="link link-address">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+            <address class="address">
+                <ul class="address-desc">
+                    <li class="address-item"><a href="https://goo.gl/maps/hwr6JyE6x6DrGfeN8" class="link link-address">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li class="address-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                    <li class="address-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
 
         </div>
     </footer>
