--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,11 @@
 
     <link rel="stylesheet" href="./css/styles.css">
 
+
+
 </head>
+
+
 
 <body>
     <!-- Menu-->
@@ -40,85 +44,103 @@
 
     <!-- Main -->
     <main>
-        <section class="portfolio">
+        <section class="section">
             <div class="container">
                 <h1 class="title">Потртфолио</h1>
-                <ul class="list flex">
-                    <li><button type="button" class="button current secondary">Все</button></li>
-                    <li><button type="button" class="button secondary">Веь-сайт</button></li>
-                    <li><button type="button" class="button secondary">Приложения</button></li>
-                    <li><button type="button" class="button secondary">Дизайн</button></li>
-                    <li><button type="button" class="button secondary">Маркетинг</button></li>
+                <ul class="filter">
+                    <li class="filter-iteam"><button type="button" class="button current secondary">Все</button></li>
+                    <li class="filter-iteam"><button type="button" class="button secondary">Веб-сайт</button></li>
+                    <li class="filter-iteam"><button type="button" class="button secondary">Приложения</button></li>
+                    <li class="filter-iteam"><button type="button" class="button secondary">Дизайн</button></li>
+                    <li class="filter-iteam"><button type="button" class="button secondary">Маркетинг</button></li>
                 </ul>
-                <ul class="list flex">
+                <ul class="gallery">
                     <li class="iteam">
                         <a href="" class="link">
-                            <img src="./img/portfolio/img-p.jpg" alt="Технокряк">
-                            <h2 class="title">Технокряк</h2>
-                            <p class="section-text">Веб-сайт</p>
+                            <img src="./img/portfolio/img-p.jpg" alt="Технокряк" width="370px">
+                            <div class="gallery-desc">
+                                <h2 class="gallery-title">Технокряк</h2>
+                                <p class="gallery-text">Веб-сайт</p>
+                            </div>
                         </a>
 
                     </li>
                     <li class="iteam">
                         <a href="" class="link">
-                            <img src="./img/portfolio/img-p1.jpg" alt="Постер New Orlean vs Golden Star">
-                            <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                            <p class="section-text">Дизайн</p>
+                            <img src="./img/portfolio/img-p1.jpg" alt="Постер New Orlean vs Golden Star" width="370px">
+                            <div class="gallery-desc">
+                                <h2 class="gallery-title">Постер New Orlean vs Golden Star</h2>
+                                <p class="gallery-text">Дизайн</p>
+                            </div>
                         </a>
 
                     </li>
                     <li class="iteam">
                         <a href="" class="link">
-                            <img src="./img/portfolio/img-p2.jpg" alt="Ресторан Seafood">
-                            <h2 class="title">Ресторан Seafood</h2>
-                            <p class="section-text">Приложение</p>
+                            <img src="./img/portfolio/img-p2.jpg" alt="Ресторан Seafood" width="370px">
+                            <div class="gallery-desc">
+                                <h2 class="gallery-title">Ресторан Seafood</h2>
+                                <p class="gallery-text">Приложение</p>
+                            </div>
                         </a>
 
                     </li>
                     <li class="iteam">
                         <a href="" class="link">
-                            <img src="./img/portfolio/img-p3.jpg" alt="Проект Prime">
-                            <h2 class="title">Проект Prime</h2>
-                            <p class="section-text">Маркетинг</p>
+                            <img src="./img/portfolio/img-p3.jpg" alt="Проект Prime" width="370px">
+                            <div class="gallery-desc">
+                                <h2 class="gallery-title">Проект Prime</h2>
+                                <p class="gallery-text">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
 
 
                     <li class="iteam">
                         <a href="" class="link">
-                            <img src="./img/portfolio/img-p4.jpg" alt="Inspiration has no Borders">
-                            <h2 class="title">Inspiration has no Borders</h2>
-                            <p class="section-text">Веб-сайт</p>
+                            <img src="./img/portfolio/img-p4.jpg" alt="Inspiration has no Borders" width="370px">
+                            <div class="gallery-desc">
+                                <h2 class="gallery-title">Inspiration has no Borders</h2>
+                                <p class="gallery-text">Веб-сайт</p>
+                            </div>
                         </a>
 
                     </li>
                     <li class="iteam">
                         <a href="" class="link">
-                            <img src="./img/portfolio/img-p5.jpg" alt="Проект Boxes">
-                            <h2 class="title">Проект Boxes</h2>
-                            <p class="section-text">Приложение</p>
+                            <img src="./img/portfolio/img-p5.jpg" alt="Проект Boxes" width="370px">
+                            <div class="gallery-desc">
+                                <h2 class="gallery-title">Проект Boxes</h2>
+                                <p class="gallery-text">Приложение</p>
+                            </div>
                         </a>
 
                     </li>
                     <li class="iteam">
                         <a href="" class="link">
-                            <img src="./img/portfolio/img-p6.jpg" alt="Издание Limited Edition">
-                            <h2 class="title">Издание Limited Edition</h2>
-                            <p class="section-text">Дизайн</p>
+                            <img src="./img/portfolio/img-p6.jpg" alt="Издание Limited Edition" width="370px">
+                            <div class="gallery-desc">
+                                <h2 class="gallery-title">Издание Limited Edition</h2>
+                                <p class="gallery-text">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li class="iteam">
                         <a href="" class="link">
-                            <img src="./img/portfolio/img-p7.jpg" alt="Проект LAB">
-                            <h2 class="title">Проект LAB</h2>
-                            <p class="section-text">Маркетинг</p>
+                            <img src="./img/portfolio/img-p7.jpg" alt="Проект LAB" width="370px">
+                            <div class="gallery-desc">
+                                <h2 class="gallery-title">Проект LAB</h2>
+                                <p class="gallery-text">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li class="iteam">
                         <a href="" class="link">
-                            <img src="./img/portfolio/img-p8.jpg" alt="Growing Business">
-                            <h2 class="title">Growing Business</h2>
-                            <p class="section-text">Приложение</p>
+                            <img src="./img/portfolio/img-p8.jpg" alt="Growing Business" width="370px">
+                            <div class="gallery-desc">
+                                <h2 class="gallery-title">Growing Business</h2>
+                                <p class="gallery-text">Приложение</p>
+                            </div>
 
                         </a>
                     </li>
@@ -132,13 +154,13 @@
     <footer class="footer">
         <div class="container">
             <a href="./index.html" class="logo link"><span class="blue-logo">Web</span>Studio</a>
-            <address>
-            <ul class="footer list">
-                <li><a href="https://goo.gl/maps/hwr6JyE6x6DrGfeN8" class="link link-address">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+            <address class="address">
+                <ul class="address-desc">
+                    <li class="address-item"><a href="https://goo.gl/maps/hwr6JyE6x6DrGfeN8" class="link link-address">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li class="address-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                    <li class="address-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
 
         </div>
     </footer>
